[package]
name = "opt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzer = { path = "../crates/fuzzer"}
execution_graph = { path = "../crates/execution-graph"}
mpi = { version = "0.6", features = ["user-operations", "derive"] }
libafl = "0.10.0"
libafl_targets = "0.10.0"
lazy_static = "1.0.2"